# advent-of-code-2022

./: README.md  pyproject.toml
days/: day_01.py  day_02.py
tests/: test_day_01.py  test_day_02.py
